test/testdata/list/index_assignment_negative_error.lox
var list = [];
list[-1] = 0; // error: index (-1) must not be negative
